Additions for V1.0.0 and bug fixes

--- a/default.project.json
+++ b/default.project.json
@@ -2,8 +2,12 @@
   "name": "Phantasm-UI-Engine",
   "tree": {
     "$className": "DataModel",
-    "Phantasm": {
-      "$path": "src"
-    }
+    
+	"ReplicatedStorage": {
+		"$className": "ReplicatedStorage",
+		"Phantasm": {
+			"$path": "src"
+		}
+	}
   }
 }
