First functioning version of the engine completed without any clear bugs

--- a/default.project.json
+++ b/default.project.json
@@ -5,8 +5,20 @@
     
 	"ReplicatedStorage": {
 		"$className": "ReplicatedStorage",
-		"Phantasm": {
-			"$path": "src"
+		"PhantasmSource": {
+			"$className": "Folder",
+			"PhantasmEditor": {
+				"$className": "Folder",
+				"Phantasm Editor Main":{
+					"$path": "src/Phantasm Editor/Phantasm Editor Main",
+					"PhantasmEngine": {
+						"$path": "src/PhantasmEngine"
+					}
+				}
+			},
+			"PhantasmEngine": {
+				"$path": "src/PhantasmEngine"
+			}
 		}
 	}
   }
