--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,4 +31,6 @@ markdown_extensions:
   - admonition
   - codehilite:
       guess_lang: false
+  - toc:
+      permalink: true
   - pymdownx.superfences
