--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,8 +6,8 @@ repo_url: https://github.com/Ambishyon/Phantasm
 theme:
   name: material
   pallete:
-    primary: 'Deep Purple'
-    accent: 'Deep Purple'
+    primary: Deep Purple
+    accent: Deep Purple
     scheme: preference
 
 nav:
