--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,10 +5,10 @@ repo_url: https://github.com/Ambishyon/Phantasm
 
 theme:
   name: material
-  pallete:
+  palette:
+    scheme: slate
     primary: deep purple
     accent: deep purple
-    scheme: preference
 
 nav:
   - Home: index.md
